// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fields colors 1`] = `
Array [
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-primary"
          placeholder="testing"
        />
      </div>
      <span />
      <span
        className="icon has-text-primary is-right"
      >
        <i
          aria-hidden="true"
          className="fas fa-user"
        />
      </span>
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-info"
          placeholder="testing"
        />
      </div>
      <span />
      <span
        className="icon has-text-info is-right"
      >
        <i
          aria-hidden="true"
          className="fas fa-user"
        />
      </span>
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-success"
          placeholder="testing"
        />
      </div>
      <span />
      <span
        className="icon has-text-success is-right"
      >
        <i
          aria-hidden="true"
          className="fas fa-user"
        />
      </span>
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-danger"
          placeholder="testing"
        />
      </div>
      <span />
      <span
        className="icon has-text-danger is-right"
      >
        <i
          aria-hidden="true"
          className="fas fa-user"
        />
      </span>
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-warning"
          placeholder="testing"
        />
      </div>
      <span />
      <span
        className="icon has-text-warning is-right"
      >
        <i
          aria-hidden="true"
          className="fas fa-user"
        />
      </span>
    </div>
  </div>,
]
`;

exports[`sizes 1`] = `
Array [
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-small"
        />
      </div>
      <span />
      <span
        className="icon has-text-warning is-right"
      >
        <i
          aria-hidden="true"
          className="fas fa-user"
        />
      </span>
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-medium"
        />
      </div>
      <span />
      <span
        className="icon has-text-warning is-right"
      >
        <i
          aria-hidden="true"
          className="fas fa-user"
        />
      </span>
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-large"
        />
      </div>
      <span />
      <span
        className="icon has-text-warning is-right"
      >
        <i
          aria-hidden="true"
          className="fas fa-user"
        />
      </span>
    </div>
  </div>,
]
`;

exports[`sizes rounded 1`] = `
Array [
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-small is-rounded"
        />
      </div>
      <span />
      <span
        className="icon is-right"
      >
        <i
          aria-hidden="true"
        />
      </span>
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-medium is-rounded"
        />
      </div>
      <span />
      <span
        className="icon is-right"
      >
        <i
          aria-hidden="true"
        />
      </span>
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-large is-rounded"
        />
      </div>
      <span />
      <span
        className="icon is-right"
      >
        <i
          aria-hidden="true"
        />
      </span>
    </div>
  </div>,
]
`;
